# GlucoTracker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/agents/: ba-product-agent.md  developer-agent.md  qa-test-agent.md  reviewer-agent.md
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/workflows/: agent-qa.yml  agent-reviewer.yml  ci.yml  deploy.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py  002_add_activity_json.py  003_add_language_code.py  004_add_chat_id.py
docs/: agentic-workflow.md
docs/developer/: architecture.md  setup.md
docs/extension/: adding-input-channel.md  adding-visualisation-layer.md  extending-ai-pipeline.md
docs/user/: getting-started.md
sandbox/: __init__.py  app.py  generate_test_images.py  main.py  mocks.py  seed_data.py  workflow.py
sandbox/static/: index.html
specs/001-telegram-mvp-session-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-enhanced-miro-card/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-russian-language-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-bot-ux-guided-flow-miro-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-bot-ux-miro/: spec.md
src/glucotrack/: __main__.py  config.py  db.py
tests/: conftest.py
tests/contract/: test_claude_api_schema.py  test_claude_enhanced_api_schema.py  test_miro_api_schema.py  (+2 more)
(+64 files in other folders)
