[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glucotrack"]

[project]
name = "glucotrack"
version = "0.1.0"
description = "GlucoTrack Telegram MVP — Session Logging & AI Analysis"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=22.0,<23.0",
    "anthropic>=0.40",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "types-aiofiles",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "B017"]
"src/glucotrack/models/*.py" = ["F821"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["src/glucotrack/bot/handlers\\.py", "src/glucotrack/bot/application\\.py"]

[[tool.mypy.overrides]]
# SQLAlchemy DeclarativeBase metaclass is untyped; suppress in models
module = "glucotrack.models.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/glucotrack --cov-report=term-missing"

[tool.coverage.run]
source = ["src/glucotrack"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/bot/handlers.py",
    "*/bot/application.py",
    "*/db.py",
]

[tool.coverage.report]
fail_under = 80
